force-app/main/default/objects/ProjetoDesenvolvedor__c/ProjetoDesenvolvedor__c.object-meta.xml
<CustomObject>
    <label>Projeto Desenvolvedor</label>
    <nameField>
        <displayFormat>PD - {0000}</displayFormat>
        <label>Projeto Desenvolvedor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projeto Desenvolvedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>