force-app/main/default/objects/ProjetoDesenvolvedor__c/fields/Desenvolvedor__c.field-meta.xml
<CustomField>
    <fullName>Desenvolvedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desenvolvedor</label>
    <referenceTo>Desenvolvedor__c</referenceTo>
    <relationshipLabel>Projeto Desenvolvedores</relationshipLabel>
    <relationshipName>Projeto_Desenvolvedores</relationshipName>
    <type>Lookup</type>
</CustomField>