force-app/main/default/objects/ProjetoDesenvolvedor__c/fields/FuncaoProjeto__c.field-meta.xml
<CustomField>
    <fullName>FuncaoProjeto__c</fullName>
    <label>Função no Projeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>