force-app/main/default/objects/ProjetoDesenvolvedor__c/fields/Projeto__c.field-meta.xml
<CustomField>
    <fullName>Projeto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projeto</label>
    <referenceTo>Projeto__c</referenceTo>
    <relationshipLabel>Projeto Desenvolvedores</relationshipLabel>
    <relationshipName>Projeto_Desenvolvedores</relationshipName>
    <type>Lookup</type>
</CustomField>